objects/Agency_Account_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Site_Type__c</field>
                <operation>equals</operation>
                <value>Local Marketing</value>
            </filterItems>
            <infoMessage>Account must have Site Type of Local Marketing to display.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Account Contacts</relationshipLabel>
        <relationshipName>Agency_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Contact_Notes__c</fullName>
        <label>Agency Contact Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Card_Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <label>Business Card Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <formula>If (Includes(Contact__r.Role__c, &quot;Advertising Agency&quot;), &quot;Advertising Agency; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agency Account Contacts</relationshipLabel>
        <relationshipName>Agency_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>NORTH CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WESTERN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Agency Account Contact</label>
    <nameField>
        <label>Agency Account Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Account Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>